# obs-studio-controller

./: .gitmodules  README.md
3dprinting/: README.md
3dprinting/v1.1/: case_bottom_v8.stl  case_top_v8.stl
kicad/obs-studio-controller/: README.md  buttons.kicad_sch  buttons.kicad_sch_old  custom.lib  display.kicad_sch  display.kicad_sch_old  fp-lib-table  obs-studio-controller.kicad_pcb  obs-studio-controller.kicad_pro  obs-studio-controller.kicad_sch  obs-studio-controller.kicad_sch_old  rotary.kicad_sch  rotary.kicad_sch_old  sym-lib-table  usb_c.kicad_sch  usb_c.kicad_sch_old  voltage_regulator.kicad_sch
kicad/obs-studio-controller/custom.3dshapes/: EC12D1564402.step  SW-TH_EC11K1524406-L11.7-W12.0-H24.5-P2.5-LS13.1.wrl
kicad/obs-studio-controller/custom.pretty/: DISPLAY.kicad_mod  RotaryEncoder_Alps_EC12E-Switch_Vertical_H20mm_CircularMountingHoles.kicad_mod  SW-TH_EC11K1524406.kicad_mod
kicad/obs-studio-controller/jlcpcb/: project.db
kicad/obs-studio-controller/jlcpcb/gerber/: obs-studio-controller-CuBottom.gbr  obs-studio-controller-CuTop.gbr  obs-studio-controller-EdgeCuts.gbr  obs-studio-controller-MaskBottom.gbr  obs-studio-controller-MaskTop.gbr  obs-studio-controller-PTH.drl  (+6 more)
kicad/obs-studio-controller/rotary_encoder.3dshapes/: SW-TH_EC12E1220813.wrl  rotary_encoder.stl
software/: .gitignore  CMakeLists.txt  README.md  config.cmake  export.sh  partition_table.csv  sdkconfig  set_submod_branches.sh  switchconf.sh
software/configs/: config_v1.cmake  sdkconfig_v1
software/icons/: bootlogo.xcf
software/main/: CMakeLists.txt  main.cpp  pins.h  screens.cpp  screens.h  settings.cpp  settings.h  taskmanager.cpp  taskmanager.h  utils.cpp  utils.h  wifi.cpp  wifi.h
software/main/guihelpers/: display.cpp  display.h  displaywithtitle.cpp  displaywithtitle.h  menudisplay.cpp  menudisplay.h  wificolor.cpp  wificolor.h
software/main/icons/: bootlogo.cpp  bootlogo.h
software/main/input/: rotary.cpp  rotary.h
software/main/screens/: mainmenu.cpp  mainmenu.h
software/tools/: README.md  convert-icons.py  dev-app-flash  dev-burn-efuse  dev-flash  dev-monitor
